css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    list-style-type: none;
    text-decoration: none;
}

:root {
    --jet: #383838;
    --onyx: #2b2b2c;
    --eerie-black-1: #202022;
    --eerie-black-2: #1e1e1f;
    --smoky-black: #121212;
    --white-1: #ffffff;
    --white-2: #fafafa;
    --gold: #FFD700;
    --vegas-gold: #ceb15a;
    --light-gray: #d6d6d6;
    --light-gray-70: #d6d6d6b3;
    --bittersweet-shimmer: #b84c4c;

    --border-radius: 15px;
    --margin-15: 15px;
    --margin-top-bot: 10px 0 10px 0;

    --transition-1: all .5s ease-in-out;
}

/*----------------------------
        Body style
-----------------------------*/

body {
    background-color: var(--smoky-black);
    font-family: 'Poppins', sans-serif;
    font-size: 62.5%;
}

body::-webkit-scrollbar {
    width: 4px;
  }
  
  body::-webkit-scrollbar-track {
    background-color: var(--smoky-black);        /* color of the tracking area */
  }
  
  body::-webkit-scrollbar-thumb {
    background-color: var(--onyx);
    border-radius: 20px;
}

::selection {
    background-color: var(--vegas-gold);
    color: var(--eerie-black-1);
}

/*----------------------------
        Main
-----------------------------*/

#main_container {
    min-width: 375px;
    margin: var(--margin-15) !important;
    margin-bottom: 70px;
}

/*----------------------------
    Reused style
-----------------------------*/

.items_list {
    display: flex;
}

.items_list {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: var(--margin-15);
    margin-bottom: var(--margin-15);
}

.items_list div p {
    font-size: 0.6rem;
    text-transform: uppercase;
    color: var(--light-gray-70);
}

.items_list h3, address {
    font-size: 0.8rem;
    color: var(--light-gray)
}

.items_list h1 {
    color: var(--white-2);
    font-size: 1.2rem;
    margin-left: 4px;
}

.icons {
    width: 30px;
    height: 30px;
    border-radius: 8px;
    background: var(--eerie-black-1);
    box-shadow:  5px 5px 15px #1a1a1c, -5px -5px 15px #262628;
    color: var(--gold);
    display: flex;
    justify-content: center;
    align-items: center;
    border-top: 1px solid var(--jet);
    border-left: 1px solid var(--jet);
    margin-right: 15px;
}

.icons img {
    width: 15px;
    height: 15px;
}

.border_separator {
    margin: var(--margin-top-bot);
    height: 1px;
    background-color: var(--jet);
}

.title h1 {
    font-size: 1.5rem;
    color: var(--white-2);
    font-weight: 600;
}

/*----------------------------
    Profile navegation
-----------------------------*/

#sidebar {
    max-height: 110px;
    border: 1px solid var(--jet);
    border-radius: var(--border-radius);
    position: relative;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--eerie-black-2);
    transition: var(--transition-1);
}

#profile {
    width: 95%;
}

#profile_img {
    width: 80px;
    height: 80px;
    background-color:  var(--jet);
    border-radius: var(--border-radius);
    margin: 15px 15px 15px 0; 
}

#profile_img img {
    width: 80px;
    height: 80px;
}

#profile_header {
    display: flex;
    flex-direction: row;
    align-items: center;
}

#profile_header h1 {
    color: var(--white-1);
    font-weight: 600;
    font-size: 1.3rem;
}

#profile_header h3 {
    color: var(--light-gray);
    background-color: var(--onyx);
    width: 110px;
    text-align: center;
    padding: 3px;
    border-radius: 7px;
    margin: 10px;
}

#profile_info {
    opacity: 0;
    visibility: hidden;
    transition: var(--transition-1);
}

#sidebar.active {
    max-height: 372px;
}


#sidebar.active #profile_info {
    opacity: 1;
    visibility: visible;
}

#social_icons ul {
    display: flex;
    align-items: center;
    gap: 15px;
    margin: 5px;
    user-select: none;
}

#social_icons img {
    width: 25px;
}

/*----------------------------
    Profile buttom
-----------------------------*/

#btn {
    position: absolute;
    border: none;
    outline: none;
    color: var(--gold);
    background-color: var(--onyx);
    right: 0;
    width: 30px;
    height: 30px;
    border-bottom-left-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
}

#btn span {
    display: none;
}

#btn img {
    width: 25px;
}

#btn:hover {
    cursor: pointer;
}

/*----------------------------
    Navigation bar
-----------------------------*/

#navbar {
    width: 100%;
    position: fixed;
    bottom: 0;
    left: 0;
    background-color: rgba(43, 43, 44, 1);
    border-top-left-radius: var(--border-radius);
    border-top-right-radius: var(--border-radius);
    padding: 20px;
}

#navbar ul {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 15px;
}

#navbar ul li a {
    color: var(--light-gray);
    font-size: 0.7rem;
    font-weight: 600;
    user-select: none;
}

#navbar ul li a:hover {
    color: var(--light-gray-70);
}

#navbar ul li a.active {
    color: var(--vegas-gold);
}

/*----------------------------
    About me section
-----------------------------*/

#about_me_section {
    border-radius: var(--border-radius);
    margin-top: var(--margin-15);
    border: 1px solid var(--jet);
    margin-bottom: 80px;
    background-color: var(--eerie-black-2);
    padding: 15px;
}

#about_me_section p {
    font-size: 0.8rem;
    color: var(--light-gray-70);
    padding: 10px 0 10px 0;
}

.items {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--onyx);
    border-radius: var(--border-radius);
    border-top: 1px solid var(--jet);
    border-left: 1px solid var(--jet);
    margin-top: 15px;
}

.skills_description {
    padding: 7px;
    text-align: center;
}

